syntax = "proto3";
package psql;

option go_package = "github.com/intrinsec/protoc-gen-psql/psql";

import "google/protobuf/descriptor.proto";


// Table type enum
enum  TableType {
    DATA = 0;
    RELATION = 1;
}

message CascadeUpdateOnRelatedTable {
    string field = 1;
    string value = 2;
}

message RelayCascadeUpdate {
    string source_foreign_key = 1;

    message Destination {
        string foreign_key = 1;
        string field = 2;
        string value = 3;
    }

    repeated Destination destinations = 2;
}

// Message options for sql generation
extend google.protobuf.FileOptions {
    repeated string initialization = 1091;
    repeated string finalization = 1092;
}

// Message options for sql generation
extend google.protobuf.MessageOptions {
    optional bool disabled = 1091;
    repeated string prefix = 1092;
    repeated string suffix = 1093;
    repeated string constraint = 1094;
    optional TableType tableType = 1095;
    repeated RelayCascadeUpdate relay_cascade_update = 1096;
}

// Field options
extend google.protobuf.FieldOptions {
    optional string column = 1091;
    optional string auto_fill_on_update = 1092;
    repeated CascadeUpdateOnRelatedTable cascade_update_on_related_table = 1093;
}
